@@ -6,4 +6,7 @@ Makefile.in
 *.so
 .libs
 .deps
-thumbnailer
+gnome-thumbnail-font
+gnome-font-viewer
+font-method.directory
+
