@@ -7,7 +7,8 @@ vfsmodule_LTLIBRARIES = libfont-method.la
 
 bin_PROGRAMS = gnome-thumbnail-font gnome-font-viewer
 
-libfont_method_la_LDFLAGS = -module -avoid-version
+libfont_method_la_LDFLAGS = -module -avoid-version \
+  -export-symbols-regex 'vfs_module_.*'
 libfont_method_la_LIBADD = $(FONT_METHOD_LIBS)
 libfont_method_la_SOURCES = font-method.c
 
@@ -23,6 +24,8 @@ vfsmoduleconf_DATA = font-method.conf
 vfsdirectorydir = $(datadir)/gnome/vfolders
 vfsdirectory_DATA = font-method.directory
 
+@INTLTOOL_DIRECTORY_RULE@
+
 mimeinfodir = $(datadir)/mime-info
 mimeinfo_DATA = fontilus.keys fontilus.mime
 
@@ -31,7 +34,7 @@ appreg_DATA = fontilus.applications
 
 EXTRA_DIST = \
   font-method.conf \
-  font-method.directory \
+  font-method.directory.in \
   fontilus.keys \
   fontilus.mime \
   fontilus.applications
