@@ -1,3 +1,11 @@
+2002-12-23  James Henstridge  <james@daa.com.au>
+
+	* src/thumbnailer.c (main): get rid of unused variable.
+
+	* configure.in (GETTEXT_PACKAGE): turn on i18n stuff.
+	(CFLAGS): add -Wall to compile flags.
+	(*_LIBS): remove -export-dynamic from libs.
+
 2002-12-13  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* .cvsignore: hide generated files
